apps/base/utils/server-hub/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: server-hub-basic-auth
spec:
  basicAuth:
    secret: serverhub-basic-auth
    realm: Server Hub Admin
