apps/base/utils/server-hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-hub
spec:
  selector:
    app: server-hub
  ports:
    - name: http
      port: 8000
      targetPort: 8000
